--- a/bid10huan_hyzx/bid10huan_hyzx.csproj
+++ b/bid10huan_hyzx/bid10huan_hyzx.csproj
@@ -40,6 +40,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NVelocity, Version=1.1.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\NVelocity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -56,8 +64,17 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="UrlRewriter, Version=1.0.4689.27093, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\UrlRewriter.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="handler\BAHandler.ashx" />
+    <Content Include="handler\MainHandler.ashx" />
+    <Content Include="handler\ModelHandler.ashx" />
+    <Content Include="handler\TestHandler.ashx" />
+    <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -66,10 +83,81 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DetailPage.html" />
+    <Content Include="Global.asax" />
+    <Content Include="Newtonsoft.Json.dll" />
+    <Content Include="NVelocity.dll" />
+    <Content Include="statics\css\basedev.css" />
+    <Content Include="statics\css\images\bdsstyle.css" />
+    <Content Include="statics\css\images\common.css" />
+    <Content Include="statics\css\images\style.css" />
+    <Content Include="statics\css\images\type.css" />
+    <Content Include="statics\css\kefu.css" />
+    <Content Include="statics\css\main.css" />
+    <Content Include="statics\css\reset.css" />
+    <Content Include="statics\css\skin\style.css" />
+    <Content Include="statics\css\style11.css" />
+    <Content Include="statics\images\favicon.ico" />
+    <Content Include="statics\images\logo.jpg" />
+    <Content Include="statics\images\nopic.gif" />
+    <Content Include="statics\images\qq.gif" />
+    <Content Include="statics\js\baidujs.js" />
+    <Content Include="statics\js\base64.min.js" />
+    <Content Include="statics\js\gundong.js" />
+    <Content Include="statics\js\images\jquery-1.8.0.min.js" />
+    <Content Include="statics\js\images\jquery.jslides.js" />
+    <Content Include="statics\js\images\logger.js" />
+    <Content Include="statics\js\images\play.js" />
+    <Content Include="statics\js\responsiveslides.min.js" />
+    <Content Include="statics\js\show.js" />
+    <Content Include="statics\js\skin\gotop.js" />
+    <Content Include="statics\js\skin\jquery.min.js" />
+    <Content Include="statics\js\slide.js" />
+    <Content Include="statics\public\jquery.min.js" />
+    <Content Include="templates\404.html" />
+    <Content Include="templates\banchengpin.html" />
+    <Content Include="templates\BAPage.html" />
+    <Content Include="templates\DetailModel.html" />
+    <Content Include="templates\foot.html" />
+    <Content Include="templates\head.html" />
+    <Content Include="templates\MainPage.html" />
+    <Content Include="templates\map.html" />
+    <Content Include="templates\MoreProduct.html" />
+    <Content Include="templates\navigation.html" />
+    <Content Include="templates\Product.html" />
+    <Content Include="templates\sitemap.html" />
+    <Content Include="templates\sitemap.xml" />
+    <Content Include="UrlRewriter.dll" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL.cs" />
+    <Compile Include="cmUserInfo.cs" />
+    <Compile Include="columnInfo.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="handler\BAHandler.ashx.cs">
+      <DependentUpon>BAHandler.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="handler\MainHandler.ashx.cs">
+      <DependentUpon>MainHandler.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="handler\ModelHandler.ashx.cs">
+      <DependentUpon>ModelHandler.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="handler\TestHandler.ashx.cs">
+      <DependentUpon>TestHandler.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="htmlInfo.cs" />
+    <Compile Include="htmlPara.cs" />
+    <Compile Include="json.cs" />
+    <Compile Include="NetHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlHelper.cs" />
+    <Compile Include="SqlHelperCatalog.cs" />
+    <Compile Include="Tools.cs" />
+    <Compile Include="XmlHelper.cs" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
