--- a/bid10huan_hyzx/Web.config
+++ b/bid10huan_hyzx/Web.config
@@ -47,7 +47,7 @@
           <action type="Rewrite" url="handler/TestHandler.ashx?action={R:1}"/>
         </rule>
         <rule name="sitemaphtml" stopProcessing="true">
-          <match url="^([^/]+)\.html$"/>
+          <match url="^([^/]+)$"/>
           <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
