--- a/bid10huan_hyzx/Web.config
+++ b/bid10huan_hyzx/Web.config
@@ -23,7 +23,7 @@
           <action type="Rewrite" url="handler/TestHandler.ashx?action=MainPage"/>
         </rule>
         <rule name="栏目" stopProcessing="true">
-          <match url="^list_([0-9]+)\.html$"/>
+          <match url="^list-([0-9]+)\.html$"/>
           <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
@@ -31,7 +31,7 @@
           <action type="Rewrite" url="handler/TestHandler.ashx?action=GetProduct&amp;cId={R:1}"/>
         </rule>
         <rule name="栏目页码" stopProcessing="true">
-          <match url="^list_([0-9]+)_([0-9]+)\.html$"/>
+          <match url="^list-([0-9]+)-([0-9]+)\.html$"/>
           <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
@@ -39,7 +39,7 @@
           <action type="Rewrite" url="handler/TestHandler.ashx?action=GetProduct&amp;cId={R:1}&amp;pageIndex={R:2}"/>
         </rule>
         <rule name="详情页" stopProcessing="true">
-          <match url="^([^/]+)/ashow_([0-9]+)_([0-9]+)\.html$" />
+          <match url="^([^/]+)/ashow-([0-9]+)-([0-9]+)\.html$" />
           <conditions logicalGrouping="MatchAll" trackAllCaptures="false">
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
